--- a/src/ButtonGroup/package.json
+++ b/src/ButtonGroup/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@audnavlib/button-group",
     "description": "Button Group component",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "license": "MIT",
     "author": "Audrius Navickas",
     "main": "dist/index.js",
@@ -14,7 +14,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "@audnavlib/button": "0.0.0"
+        "@audnavlib/button": "^1.0.0"
     },
     "peerDependencies": {
         "react": "^16.8.2",
