--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     },
     "author": "Audrius Navickas",
     "devDependencies": {
-        "@babel/core": "7.2.2",
-        "@babel/preset-env": "7.3.1",
-        "@babel/preset-react": "7.0.0",
-        "autoprefixer": "9.4.7",
-        "babel-loader": "8.0.5",
-        "cross-env": "5.2.0",
-        "css-loader": "2.1.0",
-        "lerna": "3.13.0",
-        "node-sass": "4.11.0",
-        "postcss-loader": "3.0.0",
-        "sass-loader": "7.1.0",
-        "style-loader": "0.23.1",
-        "webpack": "4.29.3",
-        "webpack-cli": "3.2.3"
+        "@babel/core": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
+        "@babel/preset-react": "^7.8.3",
+        "@storybook/preset-create-react-app": "^1.5.2",
+        "autoprefixer": "^9.7.4",
+        "babel-loader": "^8.0.6",
+        "cross-env": "^7.0.0",
+        "css-loader": "^3.4.2",
+        "lerna": "^3.20.2",
+        "node-sass": "^4.13.0",
+        "postcss-loader": "^3.0.0",
+        "react-scripts": "^3.3.0",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10"
     },
     "dependencies": {
-        "@storybook/cli": "4.1.13",
-        "@storybook/react": "4.1.13",
-        "react": "16.8.2",
-        "react-dom": "16.8.2"
+        "@storybook/cli": "5.3.9",
+        "@storybook/react": "5.3.9",
+        "react": "16.12.0",
+        "react-dom": "16.12.0"
     }
 }
